# pnet-revisited

./: .gitignore  GEMINI.md  README.md  config.py  pyproject.toml  training.py  training_classification.py  training_simple.py
Evaluate/visturing/: a.ipynb  all.py  prop1.py  prop10.py  prop2.py  prop34.py  prop5.py  prop67.py  prop8.py  prop9.py  res10.pkl
Training/Classification/: config.py  training_classification.py
Training/Denoising/: config.py  training_denoising.py
Training/IQA/: config.py  training.py  training_simple.py  training_with_visturing.py
Training/visturing/: optimize_global.py  optimize_global_concat.py  optimize_prop1.py  optimize_prop10.py  optimize_prop2.py  optimize_prop3_4.py  optimize_prop5.py  optimize_prop6_7.py  optimize_prop8.py  optimize_prop9.py  test_custom_vjp.py  utils.py
src/pnet_revisited/: __init__.py  initialization.py  layers.py  model.py  recalculate_a_star.py  utils.py
wandb/: latest-run
wandb/run-20260611_122601-1ph3ti6o/: run-1ph3ti6o.wandb
wandb/run-20260611_122601-1ph3ti6o/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20260611_122601-1ph3ti6o/files/model-0/: _CHECKPOINT_METADATA  _METADATA  _sharding  manifest.ocdbt
wandb/run-20260611_122601-1ph3ti6o/files/model-0/array_metadatas/: process_0
wandb/run-20260611_122720-bfwwrhnm/files/: wandb-metadata.json
wandb/run-20260611_122720-bfwwrhnm/files/model-0/: _CHECKPOINT_METADATA  manifest.ocdbt
wandb/run-20260611_123213-d8a94hwx/files/: requirements.txt  wandb-metadata.json
wandb/run-20260611_123213-d8a94hwx/files/model-0/: _CHECKPOINT_METADATA  _METADATA  _sharding  manifest.ocdbt
(+4 files in other folders)
