[project]
name = "pnet-revisited"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jorgvt", email = "vila_tronik@hotmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "datasets>=5.0.0",
    "flax>=0.10.7",
    "jax>=0.6.2; sys_platform != 'linux'",
    "jax[cuda12]>=0.6.2; sys_platform == 'linux'",
    "paramperceptnet",
    "perceptualtests",
    "pillow>=12.2.0",
    "visturing",
    "wandb>=0.27.2",
]

[build-system]
requires = ["uv_build>=0.9.25,<0.10.0"]
build-backend = "uv_build"

[project.scripts]
recalculate-astar = "pnet_revisited.recalculate_a_star:main"

[tool.uv.sources]
paramperceptnet = { git = "https://github.com/jorgvt/paramperceptnet.git" }
perceptualtests = { git = "https://github.com/Jorgvt/PerceptualTests.git" }
visturing = { git = "https://github.com/jorgvt/visturing.git" }
